feat: App icon added

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "PuertoBuenosAires",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/puerto.1024px.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -22,6 +22,6 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "description": ""
+    "description": "Puerto Buenos Aires App (en desarrollo)"
   }
 }
