--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-svg": "12.1.0",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-web": "~0.13.12",
-    "react-native-webview": "10.7.0"
+    "react-native-webview": "10.7.0",
+    "expo-barcode-scanner": "~9.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
