--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-svg-transformer": "^0.14.3",
     "react-native-web": "~0.13.12",
     "react-native-webview": "10.7.0",
-    "expo-barcode-scanner": "~9.0.0"
+    "expo-barcode-scanner": "~9.0.0",
+    "expo-camera": "~9.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
